tests/error/comptime/check_inplace_construct4.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		__builtin_comptime_free(p);

		__builtin_inplace_construct(p, 0);
	});
}
